# govrixaioss

./: .dockerignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  install.ps1  install.sh
.github/workflows/: release.yml  security.yml
config/: agentland.default.toml  govrix.default.toml  policies.example.yaml
crates/agentland-cli/: Cargo.toml
crates/agentland-cli/src/: client.rs  main.rs
crates/agentland-cli/src/commands/: agents.rs  events.rs  status.rs
crates/agentland-common/: Cargo.toml
crates/agentland-common/src/: config.rs  errors.rs  lib.rs
crates/agentland-common/src/models/: agent.rs  mod.rs  pricing.rs
crates/agentland-common/src/protocols/: mod.rs
crates/agentland-identity/: Cargo.toml
crates/agentland-identity/src/: ca.rs
crates/agentland-keygen/: Cargo.toml
crates/agentland-keygen/src/: main.rs
crates/agentland-oss-common/: Cargo.toml
crates/agentland-oss-common/src/: config.rs
crates/agentland-policy/: Cargo.toml
crates/agentland-policy/src/: engine.rs  hook.rs
crates/agentland-proxy/: Cargo.toml
crates/agentland-proxy/src/: events.rs  lib.rs  main.rs
crates/agentland-proxy/src/api/: mod.rs  router.rs  state.rs
crates/agentland-proxy/src/api/handlers/: agents.rs  budgets.rs  config.rs  costs.rs  events.rs  health.rs  projects.rs  reports.rs
crates/agentland-proxy/src/api/middleware/: auth.rs
crates/agentland-proxy/src/policy/: budget.rs  engine.rs  loader.rs  mod.rs  pii.rs
crates/agentland-proxy/src/proxy/: agent_detect.rs  handler.rs  interceptor.rs  mod.rs  streaming.rs  upstream.rs
crates/agentland-proxy/static/: dashboard.html
crates/agentland-proxy/tests/: integration.rs
crates/agentland-reports/: Cargo.toml
crates/agentland-reports/src/: lib.rs
crates/agentland-server/: Cargo.toml
crates/agentland-server/src/: api.rs  main.rs
crates/agentland-store/: Cargo.toml
crates/agentland-store/src/: agents.rs  costs.rs  db.rs  events.rs  lib.rs  projects.rs  retention.rs
crates/govrix-ai-oss-cli/src/: main.rs
crates/govrix-ai-oss-common/: Cargo.toml
crates/govrix-ai-oss-common/src/: config.rs  errors.rs
crates/govrix-ai-oss-common/src/models/: agent.rs  litellm_prices.json  mod.rs
crates/govrix-ai-oss-common/src/protocols/: mod.rs
crates/govrix-ai-oss-proxy/src/proxy/: handler.rs  interceptor.rs
crates/govrix-ai-oss-reports/src/: lib.rs
crates/govrix-ai-oss-store/: Cargo.toml
crates/govrix-ai-oss-store/src/: agents.rs  budget.rs  db.rs  events.rs  retention.rs
crates/govrix-keygen/: Cargo.toml
crates/govrix-keygen/src/: main.rs
crates/govrix-policy/src/: hook.rs
dashboard/: README.md  index.html  package.json  tsconfig.app.tsbuildinfo
dashboard/src/: App.tsx  main.tsx
dashboard/src/api/: client.ts  hooks.ts  types.ts
dashboard/src/pages/: AgentDetailPage.tsx  AgentsPage.tsx  BudgetsPage.tsx  CostsPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  ReportsPage.tsx
docker/: Dockerfile  Dockerfile.dashboard  Dockerfile.prebuilt  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  init-combined.sql  nginx.conf
init/: 001_create_events.sql  002_create_agents.sql  004_create_hypertables.sql  007_budget_config.sql  008_create_projects.sql  README.md
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  postgres.yaml  secret.yaml  service.yaml
remotion/: package-lock.json  package.json
remotion/src/: AgentlandLaunchVideo.tsx  Root.tsx
remotion/src/scenes/: DashboardAgents.tsx  DashboardCosts.tsx  DashboardEvents.tsx  TheClose.tsx  TheHow.tsx  TheReveal.tsx  TheScale.tsx
remotion/src/utils/: colors.ts  fonts.ts
scripts/: reset-db.sh  seed-db.sh  seed-demo-data.sh  setup.sh  verify.sh
