[package]
name = "agentland-keygen"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Proprietary"

[[bin]]
name = "agentland-keygen"
path = "src/main.rs"

[dependencies]
agentland-common = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
