[package]
name = "agentland-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentland"
path = "src/main.rs"

[dependencies]
agentland-common = { workspace = true }
agentland-policy = { workspace = true }
agentland-identity = { workspace = true }
agentland-common = { workspace = true }
agentland-proxy = { workspace = true }
agentland-store = { workspace = true }
axum = { version = "0.8", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
axum-server = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
