[package]
name = "govrix-ai-oss-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PostgreSQL + TimescaleDB storage layer for Govrix AI OSS"

[dependencies]
govrix-ai-oss-common = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rust_decimal = { version = "1", features = ["serde-float"] }

[dev-dependencies]
tokio = { workspace = true }
